# veritas-wx

./: .gitignore  CONTRIBUTING.en.md  CONTRIBUTING.md  LICENSE  PLAN.md  README.en.md  README.md  TASKS.md  metrics_registry.yaml  pyproject.toml
.github/workflows/: ci.yml
assets/: stations_snapshot.parquet
configs/: ingest.yaml  qc_params.yaml
docs/: data_audit.md  m5_slice_report.md  stations_curation_v0.md  stations_v1_report.md
docs/decisions/: ADR-0001-storage-hd-ntfs.md  ADR-0002-audit-driven-source-changes.md  ADR-0003-qc-calibration.md  ADR-0004-weatherbench-ports.md
notebooks/: report.ipynb
scripts/: analyze_slice.py  audit_sources.py  build_all.py  build_fact.py  build_stations.py  build_views.py  forecast_point.py  ingest_obs.py  make_figures.py  run_qc.py  scale_ingest.py  thin_slice.py
src/veritas_wx/: __init__.py  runlog.py
src/veritas_wx/analyze/: __init__.py  bootstrap.py  climatology.py  decompose.py  fdr.py  strata.py  ttest.py  weighting.py
src/veritas_wx/contracts/: __init__.py  qc_bits.py  schemas.py  units.py  validate.py
src/veritas_wx/ingest/: __init__.py  manifest.py
tests/integration/: test_fetch_smoke.py
tests/property/: test_bootstrap_coverage.py
tests/unit/: test_bootstrap_api.py  test_climatology.py  test_contracts.py  test_elevation.py  test_extract.py  test_fact.py  test_fdr.py  test_forecast_urls.py  test_graphcast.py  test_gribidx.py  test_indices.py  test_inmet_bulk.py  test_interp.py  test_manifest.py  test_metrics_core.py  test_no_estimate_without_ci.py  test_obs_parsers.py  test_precip.py  test_qc.py  test_repr_floor.py  test_runlog.py  test_seeps.py  test_stations.py  test_strata.py  test_ttest.py  test_units.py  test_views.py  test_weighting.py
(+29 files in other folders)
