[project]
name = "veritas-wx"
version = "0.1.0"
description = "Weather forecast verification against raw surface station observations, not reanalysis"
readme = "README.md"
license = "MIT"
requires-python = ">=3.12"
dependencies = [
    "polars>=1.0",
    "duckdb>=1.0",
    "numpy>=2.0",
    "pyarrow>=17",
    "xarray>=2024.6",
    "zarr>=2.18",
    "fsspec>=2024.6",
    "s3fs>=2024.6",
    "httpx>=0.27",
    "pyyaml>=6.0",
    "fastapi>=0.115",
]

[dependency-groups]
dev = [
    "pytest>=8.3",
    "hypothesis>=6.100",
    "ruff>=0.6",
]
# GRIB decoding (M5+): eccodes binary dependency — install only when needed
grib = [
    "cfgrib>=0.9.14",
    "eccodes>=2.38",
    "eccodeslib>=2.48.0.26",
]
# Geo raster reads (T3: DEM cross-check via COG range requests)
geo = [
    "rasterio>=1.3.10",
]
# GraphCast/AIWP selective HDF5 reads over HTTP ranges (5.8 GB files — never whole)
graphcast = [
    "h5py>=3.11",
    "h5netcdf>=1.3",
]
# Probabilistic scores (registered but not computed in Phase 1 — deterministic systems)
scores = [
    "scoringrules>=0.7",
]
# M8 figures + report notebook
figures = [
    "matplotlib>=3.9",
    "jupyter>=1.0",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src/veritas_wx"]

[tool.ruff]
line-length = 100
target-version = "py312"

[tool.ruff.lint]
select = ["E", "F", "W", "I", "UP", "B", "C4"]

[tool.pytest.ini_options]
testpaths = ["tests"]
addopts = "-q"
markers = [
    "network: requires internet access (excluded in CI)",
    "slow: long-running (bootstrap coverage, full-window builds)",
]
